feat: add documentation to show opening
